<resources>
    <string name="app_name">GitHub Api Test</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="detail_mail">Email</string>
    <string name="detail_name">Name</string>
    <string name="detail_location">Location</string>
    <string name="detail_bio">Bio</string>
    <string name="detail_prof">GitHub Profile</string>
    <string name="detail_web">Personal website</string>
    <string name="send_mail">Send Email using:</string>
    <string name="send_mail_error">Theres no email address for this user</string>
    <string name="transition_profile_pic" translatable="false">transition_profile_pic</string>
</resources>
