<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.activities.DetailActivity"
        tools:showIn="@layout/activity_detail">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!-- NAME -->

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                    android:id="@+id/ivContactItem0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_person" />

            <TextView
                    android:id="@+id/tvNumber0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem0"
                    android:text="@string/lorem_ipsum"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNumber0"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/ivContactItem0"
                    android:text="@string/detail_name"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </RelativeLayout>

        <View xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="64dp"
              android:layout_marginTop="8dp"
              android:background="@android:color/darker_gray" />

        <!-- MAIL -->

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                    android:id="@+id/ivContactItem1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_mail" />

            <TextView
                    android:id="@+id/tvNumber1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem1"
                    android:text="@string/lorem_ipsum"
                    android:lines="1"
                    android:ellipsize="end"
                    android:autoLink="email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNumber1"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/ivContactItem1"
                    android:text="@string/detail_mail"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </RelativeLayout>

        <View xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="64dp"
              android:layout_marginTop="8dp"
              android:background="@android:color/darker_gray" />


        <!-- NAME -->

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                    android:id="@+id/ivContactItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_location" />

            <TextView
                    android:id="@+id/tvNumber2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem2"
                    android:text="@string/lorem_ipsum"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNumber2"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/ivContactItem2"
                    android:text="@string/detail_location"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </RelativeLayout>

        <View xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="64dp"
              android:layout_marginTop="8dp"
              android:background="@android:color/darker_gray" />

        <!-- BIO -->

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                    android:id="@+id/ivContactItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_quote" />

            <TextView
                    android:id="@+id/tvNumber3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem3"
                    android:text="@string/lorem_ipsum"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNumber3"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/ivContactItem3"
                    android:text="@string/detail_bio"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </RelativeLayout>

        <View xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="64dp"
              android:layout_marginTop="8dp"
              android:background="@android:color/darker_gray" />

        <!-- BIO -->

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                    android:id="@+id/ivContactItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_link" />

            <TextView
                    android:id="@+id/tvNumber4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem4"
                    android:text="@string/lorem_ipsum"
                    android:lines="1"
                    android:ellipsize="end"
                    android:autoLink="web"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNumber4"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/ivContactItem4"
                    android:text="@string/detail_prof"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                    android:id="@+id/ivContactItem5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_link"
                    android:visibility="invisible"/>

            <TextView
                    android:id="@+id/tvNumber5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem5"
                    android:text="@string/lorem_ipsum"
                    android:lines="1"
                    android:autoLink="web"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNumber5"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/ivContactItem5"
                    android:text="@string/detail_web"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </RelativeLayout>

        <View xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="64dp"
              android:layout_marginTop="8dp"
              android:background="@android:color/darker_gray" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>